inclusão acesso banco vxmails

--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,10 @@ VXLOGIN_URL=
 
 # DataBase
 DB_CLIENT=pg
-DB_USER=postgres
-DB_HOST=0.0.0.0
-DB_DATABASE=postgres
-DB_PASSWORD=postgres
+DB_USER=vadmin
+DB_HOST=rds-vxmails.cmkmza8ljdgo.sa-east-1.rds.amazonaws.com
+DB_DATABASE=VxMails
+DB_PASSWORD=C%bul0s0Vortx
 DB_PORT=5432
 
 # API Key
