atualização secrect banco de dados

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ VXLOGIN_URL=
 # DataBase
 DB_CLIENT=pg
 DB_USER=vadmin
-DB_HOST=rds-vxmails.cmkmza8ljdgo.sa-east-1.rds.amazonaws.com
+DB_HOST=rds-vxmails-stg.cwi0vbbsyzi5.sa-east-1.rds.amazonaws.com
 DB_DATABASE=VxMails
 DB_PASSWORD=C%bul0s0Vortx
 DB_PORT=5432
