--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@herbsjs/herbsshelf": "^1.0.0",
     "apollo-server": "^2.25.0",
     "apollo-server-express": "^2.25.0",
+    "aws-sdk": "^2.989.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
