--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "aws-sdk": "^2.989.0",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
     "pg": "^8.7.1",
